# composer

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: AgentSidebar.tsx  App.tsx  singboxSchema.ts  styles.css  types.ts
frontend/src/lib/: api.ts
schemas/singbox/: index.json
schemas/singbox/certificate/: index.json
schemas/singbox/dns/: index.json
schemas/singbox/endpoints/: tailscale.json  wireguard.json
schemas/singbox/global/: experimental.json  http-client.json  log.json  ntp.json
schemas/singbox/inbounds/: anytls.json  cloudflared.json  direct.json  http.json  hysteria.json  hysteria2.json  mixed.json  naive.json  redirect.json  shadowsocks.json  shadowtls.json  socks.json  tproxy.json  trojan.json  tuic.json  tun.json  vless.json  vmess.json
schemas/singbox/outbounds/: anytls.json  block.json  direct.json  http.json  hysteria.json  hysteria2.json  naive.json  selector.json  shadowsocks.json  shadowtls.json  socks.json  ssh.json  tor.json  trojan.json  tuic.json  urltest.json  vless.json  vmess.json
schemas/singbox/route/: index.json
schemas/singbox/services/: ccm.json  derp.json  hysteria-realm.json  ocm.json  oom-killer.json  resolved.json  ssm-api.json
schemas/singbox/shared/: acme-dns01-challenge.json  auth-user.json  dialer.json  dns-route-options.json  dns-rule-action.json  dns-rule-match.json  headless-rule-match.json  http-client.json  (+13 more)
src/: api.rs  docs.rs  generator.rs  main.rs  model.rs  network.rs  schema.rs  store.rs  subscription.rs
(+33 files in other folders)
